# AI_IDE_Interaction_Tracking

./: .gitignore  AI_Interaction_Tracking_Proposal 1.docx  CHANGELOG.md  IMPLEMENTATION.md  README.md  ai-tracker.ps1  all_interactions.csv  interactions.csv  pyproject.toml  today.csv  verify_parsers.py
ai_tracker/: __init__.py  cli.py  config.py  models.py
ai_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_tracker/exporters/: csv_exporter.py
ai_tracker/parsers/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py
config/: tools.yaml
docs/: README.md  SETUP_GUIDE.docx  SETUP_GUIDE.md  api_reference.md  architecture.md  contributing.md  user_guide.md
e2e_inputs/: codex_session.jsonl  transcript.jsonl
e2e_inputs/claude_projects/my-project/: session.jsonl
scripts/: generate_setup_guide_docx.py  verify_parsers.py
tests/: test_antigravity_greeting.py  test_antigravity_parser.py  test_claude_code_parser.py  test_cli.py  test_codex_parser.py  test_csv_exporter.py  test_e2e.py  test_e2e_complete.py  test_functional.py  test_integration.py  test_performance.py  test_regression.py  test_security.py  test_smoke.py  test_uat.py  test_units.py
tests/fixtures/: antigravity_bracket.txt  antigravity_colon.txt  antigravity_timestamped.txt  antigravity_transcript.jsonl  claude_code_sample.jsonl  codex_array.json  codex_desktop_session.jsonl  codex_sample.jsonl
